[package]
name = "{{project-name}}"
# name = "hirola-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { version = "0.2.0", features = ["router", "global-state"] }
wasm-bindgen = {version = "0.2"}
console_error_panic_hook = "0.1.7"


[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "DomTokenList",
    "HtmlInputElement",
]